final bug fixes and testing back end is now functional
